--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ github_username:  TogetherMobile
 
 # Build settings
 markdown: kramdown
+highlighter: rouge
 # theme: minima
 gems:
   - jekyll-feed
